# tinyrenderer_wgpu

./: Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: engine.rs  lib.rs  main.rs  resources.rs  shader.wgsl  texture.rs
docs/: .markdownlint.yaml  _config.yml  index.markdown  test.html
docs/_layouts/: default.html
docs/_posts/: 2024-03-29-welcome-to-jekyll.markdown  2024-04-08-maybe-first-post.markdown  2024-04-15-introduction.markdown
docs/_sass/: left-sidebar.scss
docs/assets/: tinyrenderer_wgpu.js  tinyrenderer_wgpu_bg.wasm  tinyrenderer_wgpu_bg.wasm.d.ts  tr_wgpu_intro.d.ts  tr_wgpu_intro.js  tr_wgpu_intro_bg.wasm
docs/assets/css/: style.scss
