[package]
name = "tinyrenderer_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
cfg-if = "1"
env_logger = "0.11.3"
image = "0.25"
log = "0.4.21"
pollster = { version = "0.3", features = ["macro"] }
winit = "0.29"
wgpu = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
reqwest = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.19", features = ["webgl"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
